RESOLVED FIXED 255721
[GTK] Try to reuse the GTK EGL display instead of always creating a new one
https://bugs.webkit.org/show_bug.cgi?id=255721
Summary [GTK] Try to reuse the GTK EGL display instead of always creating a new one
Carlos Garcia Campos
Reported 2023-04-20 06:07:35 PDT
.
Attachments
Carlos Garcia Campos
Comment 1 2023-04-20 06:16:50 PDT
Michael Catanzaro
Comment 2 2023-04-20 12:56:02 PDT
*** Bug 255678 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2023-04-24 03:38:03 PDT
Committed 263306@main (53dd1f1cd48d): <https://commits.webkit.org/263306@main> Reviewed commits have been landed. Closing PR #12967 and removing active labels.
Michael Catanzaro
Comment 4 2023-05-12 13:24:28 PDT
*** Bug 256641 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.