[GTK] Try to reuse the GTK EGL display instead of always creating a new one https://bugs.webkit.org/show_bug.cgi?id=255721

Reviewed by Adrian Perez de Castro.

* Source/WebCore/platform/graphics/PlatformDisplay.cpp:
(WebCore::PlatformDisplay::terminateEGLDisplay):
* Source/WebCore/platform/graphics/PlatformDisplay.h:
(WebCore::PlatformDisplay::gtkEGLDisplay):
* Source/WebCore/platform/graphics/wayland/PlatformDisplayWayland.cpp:
(WebCore::PlatformDisplayWayland::initialize):
(WebCore::PlatformDisplayWayland::gtkEGLDisplay):
(WebCore::PlatformDisplayWayland::initializeEGLDisplay):
* Source/WebCore/platform/graphics/wayland/PlatformDisplayWayland.h:
* Source/WebCore/platform/graphics/x11/PlatformDisplayX11.cpp:
(WebCore::PlatformDisplayX11::gtkEGLDisplay):
(WebCore::PlatformDisplayX11::initializeEGLDisplay):
* Source/WebCore/platform/graphics/x11/PlatformDisplayX11.h:
* Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:
(WebKit::AcceleratedBackingStoreDMABuf::createSource):
(WebKit::AcceleratedBackingStoreDMABuf::makeContextCurrent):
(WebKit::gtkGLContextIsEGL): Deleted.

Canonical link: https://commits.webkit.org/263306@main