Source/WebCore/platform/graphics/wayland/PlatformDisplayWayland.h
@@ -53,6 +53,9 @@ private:
     Type type() const final { return PlatformDisplay::Type::Wayland; }
 
 #if USE(EGL)
+#if PLATFORM(GTK)
+    EGLDisplay gtkEGLDisplay() override;
+#endif
     void initializeEGLDisplay() override;
 #endif
 
